--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6101",
+    "storybook": "storybook dev",
     "build-storybook": "storybook build",
     "story-ui": "npx story-ui start --port 4101"
   },
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
+    "@tpitre/story-ui": "^3.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -26,7 +27,6 @@
     "@storybook/addon-docs": "^10.1.2",
     "@storybook/addon-vitest": "^10.1.2",
     "@storybook/react-vite": "^10.1.2",
-    "@tpitre/story-ui": "^3.6.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
