--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
-    "@tpitre/story-ui": "file:../../story-ui",
+    "@tpitre/story-ui": "^3.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
