--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
-    "@tpitre/story-ui": "^4.3.0",
+    "@tabler/icons-react": "^3.36.0",
+    "@tpitre/story-ui": "^4.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
