--- a/src/stories/.story-mappings.json
+++ b/src/stories/.story-mappings.json
@@ -154,30 +154,30 @@
   },
   {
     "title": "Card with Image and Text",
-    "fileName": "card-with-image-and-text-e5dddb9f.stories.tsx",
-    "storyId": "story-e5dddb9f",
-    "hash": "e5dddb9f",
+    "fileName": "card-with-image-and-text-6f74e5f1.stories.tsx",
+    "storyId": "story-6f74e5f1",
+    "hash": "6f74e5f1",
     "createdAt": "2025-12-05T04:27:54.156Z",
-    "updatedAt": "2025-12-05T04:27:54.156Z",
+    "updatedAt": "2025-12-16T15:45:42.540Z",
     "prompt": "Create a responsive card with image, title, and description"
   },
   {
     "title": "Button Group - Primary and Secondary Actions",
-    "fileName": "button-group-primary-and-secondary-actions-945a143e.stories.tsx",
-    "storyId": "story-945a143e",
-    "hash": "945a143e",
+    "fileName": "button-group-primary-and-secondary-actions-816e9023.stories.tsx",
+    "storyId": "story-816e9023",
+    "hash": "816e9023",
     "createdAt": "2025-12-05T12:22:47.958Z",
-    "updatedAt": "2025-12-14T23:01:56.338Z",
+    "updatedAt": "2025-12-16T04:48:50.456Z",
     "prompt": "Create a button group with primary and secondary actions"
   },
   {
     "title": "Button and Switch",
-    "fileName": "story-cda44b93.stories.tsx",
-    "storyId": "story-cda44b93",
-    "hash": "cda44b93",
+    "fileName": "button-and-switch-4c673797.stories.tsx",
+    "storyId": "story-4c673797",
+    "hash": "4c673797",
     "createdAt": "2025-12-13T21:49:45.893Z",
-    "updatedAt": "2025-12-13T22:18:08.489Z",
-    "prompt": "Now add a checkbox"
+    "updatedAt": "2025-12-16T04:39:37.372Z",
+    "prompt": "Generate a button and a switch."
   },
   {
     "title": "Switch Component",
@@ -230,8 +230,8 @@
     "storyId": "story-34fd9067",
     "hash": "34fd9067",
     "createdAt": "2025-12-13T22:54:40.954Z",
-    "updatedAt": "2025-12-13T22:54:40.954Z",
-    "prompt": "Show me a chip"
+    "updatedAt": "2025-12-15T05:37:32.483Z",
+    "prompt": "Create a Kanban board with 3 columns: To Do, In Progress, and Done. Each column should have 3-4 draggable task cards with title, description, assignee avatar, priority badge (high/medium/low), and due date. Include column headers with task counts. Use a responsive grid layout."
   },
   {
     "title": "Simple Badge",
@@ -340,5 +340,239 @@
     "createdAt": "2025-12-14T23:14:00.033Z",
     "updatedAt": "2025-12-14T23:14:00.033Z",
     "prompt": "A toggle switch"
+  },
+  {
+    "title": "Modal Dialog with Header and Footer",
+    "fileName": "modal-dialog-with-header-and-footer-914de254.stories.tsx",
+    "storyId": "modal-dialog-with-header-and-footer-914de254.stories.tsx",
+    "hash": "f5846937",
+    "createdAt": "2025-12-15T02:24:26.805Z",
+    "updatedAt": "2025-12-15T02:27:01.213Z",
+    "prompt": "can you make the button orange?"
+  },
+  {
+    "title": "Modal Variations",
+    "fileName": "modal-variations-9c4a213d.stories.tsx",
+    "storyId": "story-9c4a213d",
+    "hash": "9c4a213d",
+    "createdAt": "2025-12-15T02:31:15.823Z",
+    "updatedAt": "2025-12-15T02:31:15.823Z",
+    "prompt": "Generate a couple of modal variations."
+  },
+  {
+    "title": "Signup Wizard with Password Strength",
+    "fileName": "signup-wizard-with-password-strength-d0239b03.stories.tsx",
+    "storyId": "story-d0239b03",
+    "hash": "d0239b03",
+    "createdAt": "2025-12-15T05:43:33.304Z",
+    "updatedAt": "2025-12-15T05:43:33.304Z",
+    "prompt": "Create a 3-step signup wizard using Stepper component. Step 1: TextInput for name and email. Step 2: PasswordInput with a Progress bar showing password strength. Step 3: Review section showing entered data with a submit Button. Include Back/Next buttons at the bottom. Use only Mantine core components, no icons."
+  },
+  {
+    "title": "Pricing Plans - Three Tier Comparison",
+    "fileName": "pricing-plans-three-tier-comparison-3d8ee744.stories.tsx",
+    "storyId": "story-3d8ee744",
+    "hash": "3d8ee744",
+    "createdAt": "2025-12-15T05:45:58.058Z",
+    "updatedAt": "2025-12-15T05:45:58.058Z",
+    "prompt": "Create a pricing plans comparison with 3 tiers using Cards: Basic ($9/mo), Pro ($29/mo with \"Most Popular\" Badge), and Enterprise ($99/mo). Each card should have: title, price, a list of 4-5 features with checkmarks (use Text components), and a Button at the bottom. Use SimpleGrid for the 3-column layout. Make the Pro card visually stand out with a different border color. Use only Mantine core components."
+  },
+  {
+    "title": "User Management Table with Pagination",
+    "fileName": "user-management-table-with-pagination-ca91e1dd.stories.tsx",
+    "storyId": "story-ca91e1dd",
+    "hash": "ca91e1dd",
+    "createdAt": "2025-12-15T05:47:43.328Z",
+    "updatedAt": "2025-12-15T05:47:43.328Z",
+    "prompt": "Create a user management data table using Table component with 5 columns: Name, Email, Role (Badge), Status (Badge with color - green for active, red for inactive), and Actions (ActionIcon buttons). Show 8 rows of sample user data. Below the table, add a Pagination component. Use TableScrollContainer for responsive behavior. Include column headers with proper styling. Use only Mantine core components."
+  },
+  {
+    "title": "Event Scheduling Form",
+    "fileName": "event-scheduling-form-a944aaa4.stories.tsx",
+    "storyId": "story-a944aaa4",
+    "hash": "a944aaa4",
+    "createdAt": "2025-12-15T05:49:43.412Z",
+    "updatedAt": "2025-12-15T05:49:43.412Z",
+    "prompt": "Create an event scheduling form with: a TextInput for event name, a Textarea for description, a Group with two TextInput components styled as date and time inputs (use type=\"date\" and type=\"time\" HTML attributes), a Select dropdown for event category (Meeting, Workshop, Conference, Social), and a Checkbox for \"Send reminder\". Include a Submit button. Use Card as container with proper spacing. Use only Mantine core components."
+  },
+  {
+    "title": "Professional Profile Page - LinkedIn Style",
+    "fileName": "professional-profile-page-linkedin-style-c0bc864e.stories.tsx",
+    "storyId": "story-c0bc864e",
+    "hash": "c0bc864e",
+    "createdAt": "2025-12-15T05:51:42.668Z",
+    "updatedAt": "2025-12-15T05:51:42.668Z",
+    "prompt": "Create a professional profile page layout similar to LinkedIn. Use a 2-column Grid layout (main content 2/3, sidebar 1/3). Main column: (1) Profile header Card with BackgroundImage banner, Avatar overlapping the banner, user name Title, job title Text, location Text, connection count Badge, and Connect/Message buttons. (2) About Card with Text bio. (3) Experience Card with Timeline showing 3 job positions (company, role, dates). Sidebar column: (1) Profile stats Card showing views and connections counts. (2) Skills Card with 5 Badge items. Use only Mantine core components, no icons."
+  },
+  {
+    "title": "Alert Banner - Success Message",
+    "fileName": "alert-banner-success-message-3dd21744.stories.tsx",
+    "storyId": "story-3dd21744",
+    "hash": "3dd21744",
+    "createdAt": "2025-12-15T21:40:13.860Z",
+    "updatedAt": "2025-12-15T21:40:13.860Z",
+    "prompt": "Create a simple alert banner with success message"
+  },
+  {
+    "title": "Women's Clothing Dashboard",
+    "fileName": "women-s-clothing-dashboard-55b02970.stories.tsx",
+    "storyId": "story-55b02970",
+    "hash": "55b02970",
+    "createdAt": "2025-12-16T03:14:40.432Z",
+    "updatedAt": "2025-12-16T03:14:40.432Z",
+    "prompt": "Generate a product data dashboard for a women's clothing line."
+  },
+  {
+    "title": "Resource Hub Grid with Cards",
+    "fileName": "resource-hub-grid-with-cards-8a8bf9d1.stories.tsx",
+    "storyId": "story-8a8bf9d1",
+    "hash": "8a8bf9d1",
+    "createdAt": "2025-12-16T03:18:20.192Z",
+    "updatedAt": "2025-12-16T03:18:20.192Z",
+    "prompt": "Create a resource hub grid layout with 6 small card components. Each card should have a title, brief description, and a button. Use SimpleGrid for the layout."
+  },
+  {
+    "title": "Dashboard",
+    "fileName": "dashboard-0bdf6804.stories.tsx",
+    "storyId": "story-0bdf6804",
+    "hash": "0bdf6804",
+    "createdAt": "2025-12-16T03:29:23.739Z",
+    "updatedAt": "2025-12-16T03:40:53.835Z",
+    "prompt": "Generate this dashboard"
+  },
+  {
+    "title": "Card Component with Icons",
+    "fileName": "card-component-with-icons-03a8df42.stories.tsx",
+    "storyId": "story-03a8df42",
+    "hash": "03a8df42",
+    "createdAt": "2025-12-16T03:57:04.494Z",
+    "updatedAt": "2025-12-16T03:57:04.494Z",
+    "prompt": "Generate a card component that includes icons."
+  },
+  {
+    "title": "Women's Activewear Inventory Dashboard",
+    "fileName": "women-s-activewear-inventory-dashboard-2c7c6e52.stories.tsx",
+    "storyId": "story-2c7c6e52",
+    "hash": "2c7c6e52",
+    "createdAt": "2025-12-16T04:06:39.472Z",
+    "updatedAt": "2025-12-16T04:06:39.472Z",
+    "prompt": "Generate a product inventory dashboard for a women's activewear clothing line."
+  },
+  {
+    "title": "Women's Activewear Dashboard",
+    "fileName": "women-s-activewear-dashboard-8b79f11d.stories.tsx",
+    "storyId": "story-8b79f11d",
+    "hash": "8b79f11d",
+    "createdAt": "2025-12-16T04:17:56.999Z",
+    "updatedAt": "2025-12-16T04:17:56.999Z",
+    "prompt": "Generate a product dashboard for a women's line of activewear."
+  },
+  {
+    "title": "Card",
+    "fileName": "card-9f7dfc6f.stories.tsx",
+    "storyId": "story-9f7dfc6f",
+    "hash": "9f7dfc6f",
+    "createdAt": "2025-12-16T04:40:39.876Z",
+    "updatedAt": "2025-12-16T04:40:39.876Z",
+    "prompt": "Generate a card."
+  },
+  {
+    "title": "Women's Athletic Apparel Dashboard",
+    "fileName": "women-s-athletic-apparel-dashboard-705b2da1.stories.tsx",
+    "storyId": "story-705b2da1",
+    "hash": "705b2da1",
+    "createdAt": "2025-12-16T04:53:05.293Z",
+    "updatedAt": "2025-12-16T05:11:13.382Z",
+    "prompt": "Women's Athletic Apparel Dashboard"
+  },
+  {
+    "title": "Men's Athletic Apparel Inventory Dashboard",
+    "fileName": "men-s-athletic-apparel-inventory-dashboard-b0fd510e.stories.tsx",
+    "storyId": "story-b0fd510e",
+    "hash": "b0fd510e",
+    "createdAt": "2025-12-16T05:12:24.472Z",
+    "updatedAt": "2025-12-16T05:12:24.472Z",
+    "prompt": "A product inventory dashboard for an athletic apparel ware for men."
+  },
+  {
+    "title": "Athletic Wear for Dogs Dashboard",
+    "fileName": "athletic-wear-for-dogs-dashboard-1869f479.stories.tsx",
+    "storyId": "story-1869f479",
+    "hash": "1869f479",
+    "createdAt": "2025-12-16T05:17:34.933Z",
+    "updatedAt": "2025-12-16T05:17:34.933Z",
+    "prompt": "Generate a dashboard for a line of athletic wear for dogs."
+  },
+  {
+    "title": "80s Music Card Grid",
+    "fileName": "80s-music-card-grid-dfcd02dd.stories.tsx",
+    "storyId": "story-dfcd02dd",
+    "hash": "dfcd02dd",
+    "createdAt": "2025-12-16T05:25:27.784Z",
+    "updatedAt": "2025-12-16T05:25:27.784Z",
+    "prompt": "Generate a 4-card grid, and the cards should all be about 80s music."
+  },
+  {
+    "title": "Event Cards - 4 Grid Layout",
+    "fileName": "event-cards-4-grid-layout-60f6e6c1.stories.tsx",
+    "storyId": "story-60f6e6c1",
+    "hash": "60f6e6c1",
+    "createdAt": "2025-12-16T05:33:36.378Z",
+    "updatedAt": "2025-12-16T05:33:36.378Z",
+    "prompt": "Generate a 4-card grid of event cards."
+  },
+  {
+    "title": "4-Card Grid",
+    "fileName": "4-card-grid-49281bac.stories.tsx",
+    "storyId": "story-49281bac",
+    "hash": "49281bac",
+    "createdAt": "2025-12-16T05:40:59.083Z",
+    "updatedAt": "2025-12-16T05:40:59.083Z",
+    "prompt": "Generate a 4-card grid."
+  },
+  {
+    "title": "Event Cards - 2x4 Grid",
+    "fileName": "event-cards-2x4-grid-684c5f4b.stories.tsx",
+    "storyId": "story-684c5f4b",
+    "hash": "684c5f4b",
+    "createdAt": "2025-12-16T05:49:54.779Z",
+    "updatedAt": "2025-12-16T05:49:54.779Z",
+    "prompt": "Generate a 2x4 grid column of some event cards."
+  },
+  {
+    "title": "Women's Apparel Inventory Dashboard",
+    "fileName": "women-s-apparel-inventory-dashboard-249c9a96.stories.tsx",
+    "storyId": "story-249c9a96",
+    "hash": "249c9a96",
+    "createdAt": "2025-12-16T15:39:07.321Z",
+    "updatedAt": "2025-12-16T15:39:07.321Z",
+    "prompt": "generate a product inventory dashboard for a women's line of apparel"
+  },
+  {
+    "title": "Navigation Bar with Logo and Links",
+    "fileName": "navigation-bar-with-logo-and-links-d8b7baf6.stories.tsx",
+    "storyId": "story-d8b7baf6",
+    "hash": "d8b7baf6",
+    "createdAt": "2025-12-16T15:40:52.150Z",
+    "updatedAt": "2025-12-16T15:42:06.003Z",
+    "prompt": "Create a navigation bar with logo and menu links"
+  },
+  {
+    "title": "Navigation Bar with Logo and Links v2",
+    "fileName": "navigation-bar-with-logo-and-links-40efb8e9.stories.tsx",
+    "storyId": "story-40efb8e9",
+    "hash": "40efb8e9",
+    "createdAt": "2025-12-16T15:52:38.873Z",
+    "updatedAt": "2025-12-16T15:52:38.873Z",
+    "prompt": "Create a navigation bar with logo and menu links"
+  },
+  {
+    "title": "Navigation Bar with Logo and Links v3",
+    "fileName": "navigation-bar-with-logo-and-links-77df829f.stories.tsx",
+    "storyId": "story-77df829f",
+    "hash": "77df829f",
+    "createdAt": "2025-12-16T15:53:15.935Z",
+    "updatedAt": "2025-12-16T15:53:15.935Z",
+    "prompt": "Create a navigation bar with logo and menu links"
   }
 ]
